fix: prevent page breaks in the middle of items

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ blockquote {
 	margin-bottom: 1em;
 }
 
+.item {
+	break-inside: avoid;
+}
+
 /* End general, overall styling */
 
 /* Header name styling */
